set start image z-index to ensure visible over videos on restart

--- a/src/assets/styles/player.scss
+++ b/src/assets/styles/player.scss
@@ -608,6 +608,7 @@ $romper-hover-text-size: 25px;
   position: absolute;
   top: 0;
   width: 100%;
+  z-index: 2;
 }
 
 .romper-variable-panel {
